changed admin register logic
